--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,11 @@
             <artifactId>mongodb-driver-sync</artifactId>
             <version>4.3.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.2</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
